tests/paczka1/fuzzy1/96624425.err
Error in line 20: lif3 A97 40,2
Error in line 2: Tff S233 80,6
Error in line 30: lif3 S891 23,2
Error in line 33: lif3 S506 0,8
Error in line 17: S891 A97 81,7
Error in line 34: lif3 S233 49,8
